--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,22 +1,12 @@
 name: Docker Image CI
 
 on:
-  workflow_dispatch:
-    inputs:
-      INPUT_TARGET:
-        description: "Target to build (platform/target/subtarget)"
-        required: false
-        default: "all"
   schedule:
     - cron: 0 0 * * *
 
 jobs:
   Config:
-    name: Generate Config
     runs-on: ubuntu-latest
-    outputs:
-      TARGETS: ${{ steps.find-targets.outputs.TARGETS }}
-
     steps:
       - name: Login To Aliyun
         uses: docker/login-action@v2
@@ -53,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: |
             registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/nextcloud:latest
