--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,20 @@
 name: Docker Image CI
 
 on:
+  workflow_dispatch:
+    inputs:
+      INPUT_TARGET:
+        description: "Target to build (platform/target/subtarget)"
+        required: false
+        default: "all"
   schedule:
     - cron: 0 0 * * *
 
 jobs:
   Config:
+    name: Generate Config
     runs-on: ubuntu-latest
+
     steps:
       - name: Login To Aliyun
         uses: docker/login-action@v2
