--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   Config:
     name: Generate Config
-    runs-on: ubuntu-latest
+    runs-on: debian-latest
 
     steps:
       - name: Login To Aliyun
