--- a/.github/workflows/docker-pull-tag-push.yml
+++ b/.github/workflows/docker-pull-tag-push.yml
@@ -79,3 +79,7 @@ jobs:
           docker pull iyuucn/iyuuplus-dev:latest
           docker tag iyuucn/iyuuplus-dev:latest registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/iyuuplus-dev:latest
           docker push registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/iyuuplus-dev:latest
+
+          docker pull iyuucn/iyuuplus:latest
+          docker tag iyuucn/iyuuplus:latest registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/iyuuplus:latest
+          docker push registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/iyuuplus:latest
