--- a/.github/workflows/docker-pull-tag-push.yml
+++ b/.github/workflows/docker-pull-tag-push.yml
@@ -156,6 +156,6 @@ jobs:
           docker tag haishanh/yacd:latest registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/yacd:latest
           docker push registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/yacd:latest
 
-          docker pull talebook/calibre-websever:latest
-          docker tag talebook/calibre-websever:latest registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/calibre-websever:latest
-          docker push registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/calibre-websever:latest
+          docker pull talebook/talebook:latest
+          docker tag talebook/talebook:latest registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/talebook:latest
+          docker push registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/talebook:latest
